added window layout options